Criando metodo cadastrar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=livraria_api
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost/livraria_api
+spring.datasource.username=felipe
+spring.datasource.password=985goool
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
